changes to snappyHexMesh project

--- a/TnbSnappyHexMesh/TnbSnappyHexMesh.vcxproj
+++ b/TnbSnappyHexMesh/TnbSnappyHexMesh.vcxproj
@@ -194,6 +194,9 @@
     <Link>
       <SubSystem>Console</SubSystem>
     </Link>
+    <PostBuildEvent>
+      <Command>if not exist "$(SolutionDir)include" mkdir "$(SolutionDir)include"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='DebugNoCopyHxx|x64'">
     <ClCompile>
