changes to Parallel project

--- a/TnbParallel/TnbParallel.vcxproj
+++ b/TnbParallel/TnbParallel.vcxproj
@@ -96,17 +96,17 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(MSMPI_INC);$(SolutionDir)Commons\metis\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)Commons\metis\include;$(IncludePath)</IncludePath>
     <TargetName>$(ProjectName)d</TargetName>
     <LibraryPath>$(SolutionDir)Commons\metis\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugNoCopyHxx|x64'">
-    <IncludePath>$(MSMPI_INC);$(SolutionDir)Commons\metis\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)Commons\metis\include;$(IncludePath)</IncludePath>
     <TargetName>$(ProjectName)d</TargetName>
     <LibraryPath>$(SolutionDir)Commons\metis\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(MSMPI_INC);$(SolutionDir)Commons\metis\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)Commons\metis\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)Commons\metis\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -202,7 +202,7 @@ for /r "$(ProjectDir)tnbLib" %%f in (*.hxx) do @xcopy "%%f" "$(ProjectDir)includ
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>libmetis.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;metis.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;metis.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
