add some compressible solvers

--- a/applications/solvers/compressible/rhoCentralFoam/rhoCentralFoam.vcxproj
+++ b/applications/solvers/compressible/rhoCentralFoam/rhoCentralFoam.vcxproj
@@ -203,6 +203,7 @@
     <ClCompile Include="rhoCentralFoam.cxx" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="BCs\mixedFixedValueSlip\mixedFixedValueSlipFvPatchFieldI.hxx" />
     <None Include="centralCourantNo.lxx" />
     <None Include="createFieldRefs.lxx" />
     <None Include="createFields.lxx" />
