--- a/TnbBase/TnbBase.vcxproj
+++ b/TnbBase/TnbBase.vcxproj
@@ -86,7 +86,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>msmpi.lib;zlibstatd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libmpiautodbl_seti8_64.lib;libmpiautodbl_seti8r8_64.lib;libmpiautodbl_setr8_64.lib;libmpio64.lib;libmtmpiautodbl_seti8_64.lib;libmtmpiautodbl_seti8r8_64.lib;libmtmpiautodbl_setr8_64.lib;libmtmpio64.lib;libmtpcdmpi64.lib;libmtpcmpi64.lib;libpcdmpi64.lib;libpcmpi64.lib;zlibstatd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>if not exist "$(SolutionDir)include" mkdir "$(SolutionDir)include"
@@ -113,7 +113,7 @@ for /r "$(ProjectDir)tnbLib" %%f in (*.lxx) do @xcopy "%%f" "$(SolutionDir)inclu
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>msmpi.lib;zlibstatd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libmpiautodbl_seti8_64.lib;libmpiautodbl_seti8r8_64.lib;libmpiautodbl_setr8_64.lib;libmpio64.lib;libmtmpiautodbl_seti8_64.lib;libmtmpiautodbl_seti8r8_64.lib;libmtmpiautodbl_setr8_64.lib;libmtmpio64.lib;libmtpcdmpi64.lib;libmtpcmpi64.lib;libpcdmpi64.lib;libpcmpi64.lib;zlibstatd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>
